# FalkorDB-core-rs

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml  rustfmt.toml
headers/: common_struct_defs.h  query_ctx_struct.h
src/: lib.rs  undo_log.rs  undo_log_ffi.rs
src/attribute_set/: ffi.rs  mod.rs
src/binding/: cmutex.rs  constraint.rs  crwlock.rs  graph.rs  index.rs  mod.rs  query_ctx_struct.rs
src/commands/: command_ctx.rs  ffi.rs  mod.rs
src/errors/: mod.rs
src/graph/: ffi.rs  graph.rs  mod.rs
src/graph/matrix/: GraphBLAS.rs  delta_matrix.rs  delta_matrix_iter.rs  ffi.rs  mod.rs  sparse_matrix.rs  sparse_matrix_iter.rs  tensor.rs
src/graph_context/: ffi.rs  mod.rs
src/graph_entity/edge/: mod.rs
src/graph_entity/node/: mod.rs
src/index/: index.rs  index_ffi.rs  mod.rs
src/query_ctx/: ffi.rs  mod.rs
src/schema/: mod.rs  schema.rs  schema_ffi.rs
src/types/: mod.rs
src/undo_log/: ffi.rs  mod.rs  undo_log.rs  undo_log_ffi.rs
